--- a/.tmux-powerlinerc
+++ b/.tmux-powerlinerc
@@ -11,7 +11,7 @@
 	# The theme to use.
 	export TMUX_POWERLINE_THEME="mytheme"
 	# Overlay dirctory to look for themes. There you can put your own themes outside the repo. Fallback will still be the "themes" directory in the repo.
-	export TMUX_POWERLINE_DIR_USER_THEMES=""
+	export TMUX_POWERLINE_DIR_USER_THEMES="~/dotfiles/.tmux/tmux-powerline/themes/"
 	# Overlay dirctory to look for segments. There you can put your own segments outside the repo. Fallback will still be the "segments" directory in the repo.
 	export TMUX_POWERLINE_DIR_USER_SEGMENTS=""
 # }
@@ -84,7 +84,7 @@
 
 # now_playing.sh {
 	# Music player to use. Can be any of {audacious, banshee, cmus, itunes, lastfm, mocp, mpd, mpd_simple, pithos, rdio, rhythmbox, spotify, spotify_wine}.
-	export TMUX_POWERLINE_SEG_NOW_PLAYING_MUSIC_PLAYER=""
+	export TMUX_POWERLINE_SEG_NOW_PLAYING_MUSIC_PLAYER="itunes"
 	# Maximum output length.
 	export TMUX_POWERLINE_SEG_NOW_PLAYING_MAX_LEN="40"
 	# How to handle too long strings. Can be {trim, roll}.
